--- a/poker/poker.vcxproj
+++ b/poker/poker.vcxproj
@@ -140,15 +140,20 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="additionalFunction.cpp" />
+    <ClCompile Include="bot.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="ohama.cpp" />
     <ClCompile Include="paranoise.cpp" />
     <ClCompile Include="mode.cpp" />
+    <ClCompile Include="utilities.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="additionalFunction.h" />
+    <ClInclude Include="bot.h" />
+    <ClInclude Include="main.h" />
     <ClInclude Include="ohama.h" />
     <ClInclude Include="mode.h" />
+    <ClInclude Include="utilities.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
